feat: write login user and update register
