# docs/swagger.yaml
@@ -58,6 +58,25 @@ definitions:
       username:
         type: string
     type: object
+  user.LoginRequest:
+    properties:
+      password:
+        type: string
+      username:
+        type: string
+    required:
+    - password
+    - username
+    type: object
+  user.LoginSwaggerResponse:
+    properties:
+      data:
+        type: string
+      message:
+        type: string
+      status:
+        type: string
+    type: object
   user.RegisterUserRequest:
     properties:
       display_name:
@@ -170,6 +189,36 @@ paths:
       summary: Shorten URL
       tags:
       - Links
+  /v1/users/login:
+    post:
+      consumes:
+      - application/json
+      description: Return JWT Token if Correct Incredentials
+      parameters:
+      - description: Input Required
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/user.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/user.LoginSwaggerResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helpers.ErrorResponse'
+      summary: Return JWT Token if Correct Incredentials
+      tags:
+      - User
   /v1/users/register:
     post:
       consumes:
